@startuml

entity Users {
  IdUser : int
  Name : string
  Email : string
  MotDePasse : string
}

entity EspaceDeCoworking {
  IdCoworkingSpace : int
  Name : string
  Description : string
  Adress : string
}

entity Comment {
  IdComment : int
  Content : string
}

entity Reservation {
  IdReservation : int
  DateReservation : date
}

Utilisateur -- Commentaire : Ajoute
Utilisateur -- Reservation : Réserve
Commentaire -- EspaceDeCoworking : PostéSur
Reservation -- EspaceDeCoworking : PorteSur

@enduml
